--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crwn-clothing-server",
+  "name": "game-tracking-app-server",
   "version": "1.0.0",
   "engines": {
     "node": "12.13.0",
@@ -18,9 +18,7 @@
     "body-parser": "^1.18.3",
     "cors": "2.8.5",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-sslify": "^1.2.0",
-    "stripe": "6.28.0"
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
